# ai-session-migrator

./: .gitignore  AGENTS.md  LICENSE  MEMORY.md  README.en.md  README.md  README.zh-CN.md  package-lock.json  package.json
.github/workflows/: release-macos.yml  release-windows.yml
apps/desktop/: index.html  package.json  vitest.config.ts
apps/desktop/scripts/: tauri-msvc-env.mjs
apps/desktop/src/: App.test.tsx  App.tsx  SplashScreen.test.tsx  SplashScreen.tsx  node-builtins.d.ts  release-workflow.test.ts  startup-shell.test.ts  styles.css  styles.test.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/codex/: archive.rs  backup.rs  catalog_repair.rs  deletion.rs  error.rs  export.rs  metadata.rs  migration.rs  mod.rs  paths.rs  restart.rs  scan.rs  sqlite.rs  test_support.rs  transcript.rs
apps/desktop/src/domain/: defaultCodexHome.test.ts  defaultCodexHome.ts  desktopActions.ts  migrationApi.test.ts  migrationApi.ts  session.ts  (+2 more)
docs/: promotion.md  promotion.zh-CN.md  release-notes-v0.1.0.md  release-notes-v0.1.0.zh-CN.md  release-notes-v0.1.1.md
docs/superpowers/plans/: 2026-06-15-desktop-mvp.md  2026-06-17-provider-migration-desktop.md  2026-07-06-codex-visible-index-repair.md  2026-07-14-session-raw-export.md
docs/superpowers/specs/: 2026-06-16-provider-migration-desktop-design.md  2026-07-06-codex-visible-index-repair-design.md  2026-07-14-session-raw-export-design.md
